# phantom-agent

./: .gitignore  CLAUDE.md  ISSUES.md  debug.py  evolve.py  main_claude.py  pyproject.toml  run.sh  server_claude.py
.claude/: settings.json
.claude/skills/debug-benchmark/: SKILL.md
agent_v2/: __init__.py  agent.py  claude_agent.py  claude_tools.py  config.py  context.py  preflight.py  preflight_prompt.md  prompts.py  system_prompt.md  tools.py
agent_v2/skills/: __init__.py  clarification.md  claude_classifier.py  crm_lookup.md  email_outbound.md  followup_reschedule.md  inbox_processing.md  knowledge_capture.md  knowledge_cleanup.md  knowledge_lookup.md  purchase_ops.md  security_denial.md
docs/: architecture.md  evolution-system.md
evolution/: state.json
evolution/v001/: snapshot.json
evolution/v001/proposed/skills/: crm_lookup.md  inbox_processing.md
evolution/v001/skills/: knowledge_cleanup.md  unsupported_capability.md
evolution/v002/: snapshot.json  system_prompt.md
evolution/v002/skills/: email_outbound.md  followup_reschedule.md  inbox_processing.md  invoice_creation.md  knowledge_cleanup.md  purchase_ops.md
